--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+	--font-poppins: "Poppins", sans-serif;
+}
+body {
+	font-family: var(--font-poppins);
+}
+
 @layer base {
 	:root {
 		--background: 0 0% 100%;
