Fix issue with Grid and Courseworks

--- a/app/globals.css
+++ b/app/globals.css
@@ -91,6 +91,6 @@ body {
 	}
 
 	.black-gradient {
-		background: linear-gradient(90deg, #161a31 0%, #06091f 100%);
+		background: linear-gradient(90deg, #010214 0%, #010214 100%);
 	}
 }
